@@ -18,6 +18,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-10270 (Invalid error message when connection via SSL fails:
     "trying to connect via (null)"). (Kamil Tekiela)
 
+- SPL:
+  . Fixed bug GH-11972 (RecursiveCallbackFilterIterator regression in 8.1.18).
+    (nielsdos)
+
 31 Aug 2023, PHP 8.1.23
 
 - CLI:
